basic-setup/dashboards/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: common-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: prometheus.local
      http:
        paths:
          - path: "/(.*)"
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
